update npm package

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@harmony-js/network": "^0.1.45",
     "@harmony-js/utils": "^0.1.45",
     "@openzeppelin/contracts": "^2.5.1",
+    "core-util-is": "^1.0.2",
     "dotenv": "^8.1.0",
     "openzeppelin-solidity": "^2.2.0",
     "tslib": "^1.10.0"
