--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "core-util-is": "^1.0.2",
     "dotenv": "^8.1.0",
     "openzeppelin-solidity": "^2.2.0",
-    "tslib": "^1.10.0"
+    "tslib": "^1.10.0",
+    "yargs": "^15.4.1"
   },
   "devDependencies": {
+    "@harmony-js/crypto": "^0.1.48",
     "bignumber.js": "^9.0.0"
   }
 }
